--- a/templates/_index-content.svelte.html
+++ b/templates/_index-content.svelte.html
@@ -1,14 +1,14 @@
-<div id="map">
+<div id="mapmain">
   <div id="nameSpace"></div>
-  <div id="map-legend">
-          <div id="legend-items">
-          <div class="candidate"><span class="label-business"></span>Property damage</div>
-          <div class="candidate"><span class="label-fire"></span>Fire damage</div>
-          <div class="candidate"><span class="label-building"></span>Damaged building</div>
-    </div>
-  </div>
   <div id="map">
       <div class="mapboxgl-ctrl mapboxgl-ctrl-dw-compass"><svg class="compass" viewBox="-4.5,-7.25,9,29.04998779296875" style="width: 9px; height: 29.05px;"><g><path transform="rotate(-90)" d="M-10,0 l0,0 l -11.8,3.2 l2,-3.2 l-2,-3.2 l 11.8,3.2 z" stroke="black" fill="black" shape-rendering="geometricPrecision"></path><text style="dominant-baseline: central; text-anchor: middle; font-size: 12px;">N</text></g></svg></div>
   </div>
   <div id="map-popover"></div>
+</div>
+<div id="map-legend">
+  <div id="legend-items">
+  <div class="candidate"><span class="label-business"></span>Property damage</div>
+  <div class="candidate"><span class="label-fire"></span>Fire damage</div>
+  <div class="candidate"><span class="label-building"></span>Damaged building</div>
+</div>
 </div>
