--- a/templates/_index-content.svelte.html
+++ b/templates/_index-content.svelte.html
@@ -7,8 +7,9 @@
 </div>
 <div id="map-legend">
   <div id="legend-items">
+  <div class="candidate"><span class="label-building"></span>Damaged building</div>
   <div class="candidate"><span class="label-business"></span>Property damage</div>
   <div class="candidate"><span class="label-fire"></span>Fire damage</div>
-  <div class="candidate"><span class="label-building"></span>Damaged building</div>
+  <div class="candidate"><span class="label-destroyed"></span>Destroyed</div>
 </div>
 </div>
