--- a/templates/_index-content.svelte.html
+++ b/templates/_index-content.svelte.html
@@ -13,3 +13,8 @@
   <div class="candidate"><span class="label-destroyed"></span>Destroyed</div>
 </div>
 </div>
+<div id="map-legend2">
+  <div id="legend-items">
+  <div class="candidate"><span class="label-business"></span>Damaged property</div>
+  </div>
+</div>
