--- a/templates/_index-content.svelte.html
+++ b/templates/_index-content.svelte.html
@@ -15,6 +15,6 @@
 </div>
 <div id="map-legend2">
   <div id="legend-items">
-  <div class="candidate"><span class="label-business"></span>Damaged property</div>
+  <div class="candidate"><span class="label-damage"></span>Damaged property</div>
   </div>
 </div>
