--- a/styles/index.scss
+++ b/styles/index.scss
@@ -29,11 +29,11 @@ $selector-wrapper: '.strib-styles.ssa.ssb.ssc';
 
 @font-face {
   font-family: 'StateFaceRegular';
-  src: url('http://static.startribune.com/news/projects/all/20200303-primary-precinct-map/webfont/stateface-regular-webfont.eot');
-  src: url('http://static.startribune.com/news/projects/all/20200303-primary-precinct-map/webfont/stateface-regular-webfont.eot?#iefix') format('embedded-opentype'),
-       url('http://static.startribune.com/news/projects/all/20200303-primary-precinct-map/webfont/stateface-regular-webfont.woff') format('woff'),
-       url('http://static.startribune.com/news/projects/all/20200303-primary-precinct-map/webfont/stateface-regular-webfont.ttf') format('truetype'),
-       url('http://static.startribune.com/news/projects/all/20200303-primary-precinct-map/webfont/stateface-regular-webfont.svg#StateFaceRegular') format('svg');
+  src: url('https://static.startribune.com/news/projects/all/20200303-primary-precinct-map/webfont/stateface-regular-webfont.eot');
+  src: url('https://static.startribune.com/news/projects/all/20200303-primary-precinct-map/webfont/stateface-regular-webfont.eot?#iefix') format('embedded-opentype'),
+       url('https://static.startribune.com/news/projects/all/20200303-primary-precinct-map/webfont/stateface-regular-webfont.woff') format('woff'),
+       url('https://static.startribune.com/news/projects/all/20200303-primary-precinct-map/webfont/stateface-regular-webfont.ttf') format('truetype'),
+       url('https://static.startribune.com/news/projects/all/20200303-primary-precinct-map/webfont/stateface-regular-webfont.svg#StateFaceRegular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
