--- a/templates/_cms-footer.svelte.html
+++ b/templates/_cms-footer.svelte.html
@@ -1,4 +1,4 @@
-<footer role="contentinfo" class="with-copyright footer-strib-site">
+<!-- <footer role="contentinfo" class="with-copyright footer-strib-site">
   <div class="container-lg">
     <div class="footer-strib-site-top-section">
       <svg class="strib-icon-svg logo">
@@ -30,21 +30,21 @@
         </li>
 
         <li>
-          <a href="http://pinterest.com/startribune/" target="_blank" rel="noopener">
+          <a href="https://pinterest.com/startribune/" target="_blank" rel="noopener">
             <i class="strib-icon strib-social-pinterest-circle"></i>
             <span class="sr-only">Star Tribune Pinterest page</span>
           </a>
         </li>
 
         <li>
-          <a href="http://www.instagram.com/startribune/" target="_blank" rel="noopener">
+          <a href="https://www.instagram.com/startribune/" target="_blank" rel="noopener">
             <i class="strib-icon strib-social-instagram-circle"></i>
             <span class="sr-only">Star Tribune Instagram account</span>
           </a>
         </li>
 
         <li>
-          <a href="http://startribune.tumblr.com/" target="_blank" rel="noopener">
+          <a href="https://startribune.tumblr.com/" target="_blank" rel="noopener">
             <i class="strib-icon strib-social-tumblr-circle"></i>
             <span class="sr-only">Star Tribune Tumblr page</span>
           </a>
@@ -57,25 +57,25 @@
         <div class="link-set-label">Company</div>
         <ul>
           <li>
-            <a href="http://startribune.com/about/">About the Star Tribune</a>
+            <a href="https://startribune.com/about/">About the Star Tribune</a>
           </li>
           <li>
-            <a href="http://startribune.com/contactus/">Contact us</a>
+            <a href="https://startribune.com/contactus/">Contact us</a>
           </li>
           <li>
-            <a href="http://startribune.com/workforus/">Work For Us</a>
+            <a href="https://startribune.com/workforus/">Work For Us</a>
           </li>
           <li>
-            <a href="http://startribune.com/newspapersineducation/">News in Education</a>
+            <a href="https://startribune.com/newspapersineducation/">News in Education</a>
           </li>
           <li>
-            <a href="http://citypages.com/">City Pages</a>
+            <a href="https://citypages.com/">City Pages</a>
           </li>
           <li>
-            <a href="http://startribune.com/sports/preps/">High school sports hubs</a>
+            <a href="https://startribune.com/sports/preps/">High school sports hubs</a>
           </li>
           <li>
-            <a href="http://startribune.com/NewsApps/">Mobile and tablet apps</a>
+            <a href="https://startribune.com/NewsApps/">Mobile and tablet apps</a>
           </li>
         </ul>
       </div>
@@ -84,13 +84,13 @@
         <div class="link-set-label">Advertise with us</div>
         <ul>
           <li>
-            <a href="http://startribune.com/businessconsultant/">Talk with a business consultant</a>
+            <a href="https://startribune.com/businessconsultant/">Talk with a business consultant</a>
           </li>
           <li>
-            <a href="http://startribune.com/mediakit/">Media kit</a>
+            <a href="https://startribune.com/mediakit/">Media kit</a>
           </li>
           <li>
-            <a href="http://startribune.com/classified/">Classifieds</a>
+            <a href="https://startribune.com/classified/">Classifieds</a>
           </li>
         </ul>
       </div>
@@ -99,25 +99,25 @@
         <div class="link-set-label">Buy</div>
         <ul>
           <li>
-            <a href="http://startribune.com/store/">Star Tribune Store</a>
+            <a href="https://startribune.com/store/">Star Tribune Store</a>
           </li>
           <li>
-            <a href="http://startribune.com/photoreprints/">Photo Reprints</a>
+            <a href="https://startribune.com/photoreprints/">Photo Reprints</a>
           </li>
           <li>
-            <a href="http://startribune.com/archives/">Archived articles</a>
+            <a href="https://startribune.com/archives/">Archived articles</a>
           </li>
           <li>
-            <a href="http://startribune.com/fullpagearchives/">Full Page Archive: 150+ years</a>
+            <a href="https://startribune.com/fullpagearchives/">Full Page Archive: 150+ years</a>
           </li>
           <li>
-            <a href="http://startribune.com/backcopies/">Back Copies</a>
+            <a href="https://startribune.com/backcopies/">Back Copies</a>
           </li>
           <li>
-            <a href="http://startribune.com/commercialreprints/">Commercial reprints</a>
+            <a href="https://startribune.com/commercialreprints/">Commercial reprints</a>
           </li>
           <li>
-            <a href="http://startribune.com/licensing/">Licensing</a>
+            <a href="https://startribune.com/licensing/">Licensing</a>
           </li>
         </ul>
       </div>
@@ -126,22 +126,22 @@
         <div class="link-set-label">Customer support</div>
         <ul>
           <li>
-            <a href="http://startribune.com/feedback/">Help and Feedback</a>
+            <a href="https://startribune.com/feedback/">Help and Feedback</a>
           </li>
           <li>
-            <a href="http://startribune.com/membercenter/">Manage your account</a>
+            <a href="https://startribune.com/membercenter/">Manage your account</a>
           </li>
           <li>
-            <a href="http://startribune.com/subscriptionservices/">Newspaper subscription</a>
+            <a href="https://startribune.com/subscriptionservices/">Newspaper subscription</a>
           </li>
           <li>
-            <a href="http://startribune.com/digitalaccess/">Digital access</a>
+            <a href="https://startribune.com/digitalaccess/">Digital access</a>
           </li>
           <li>
-            <a href="http://startribune.com/eedition/">eEdition</a>
+            <a href="https://startribune.com/eedition/">eEdition</a>
           </li>
           <li>
-            <a href="http://startribune.com/subscriptionservices/">Vacation hold/billing</a>
+            <a href="https://startribune.com/subscriptionservices/">Vacation hold/billing</a>
           </li>
         </ul>
       </div>
@@ -150,16 +150,16 @@
         <div class="link-set-label">Website</div>
         <ul class="footer-navigation-links">
           <li>
-            <a href="http://startribune.com/termsofuse/">Terms of use</a>
+            <a href="https://startribune.com/termsofuse/">Terms of use</a>
           </li>
           <li>
-            <a href="http://startribune.com/privacypolicy/">Privacy policy</a>
+            <a href="https://startribune.com/privacypolicy/">Privacy policy</a>
           </li>
           <li>
-            <a href="http://startribune.com/siteindex/">Site index</a>
+            <a href="https://startribune.com/siteindex/">Site index</a>
           </li>
           <li>
-            <a href="http://startribune.com/rssfeeds/">RSS</a>
+            <a href="https://startribune.com/rssfeeds/">RSS</a>
           </li>
         </ul>
       </div>
@@ -172,4 +172,4 @@
       &copy; 2018 StarTribune. All rights reserved.
     </div>
   </div>
-</footer>
+</footer> -->
