--- a/templates/_index-content.svelte.html
+++ b/templates/_index-content.svelte.html
@@ -1,6 +1,7 @@
 <div id="mapmain">
   <div id="nameSpace"></div>
   <div id="map">
+      <div class="directional">Click and drag to pan</div>
   </div>
   <div id="map-popover"></div>
 </div>
