--- a/styles/index.scss
+++ b/styles/index.scss
@@ -181,6 +181,20 @@ text {
   }
 }
 
+.directional {
+  position:absolute;
+  font-size:11px;
+  color:#808080;
+  z-index:200;
+  bottom:20px;
+  right:10px;
+  background:rgba(255,255,255,0.5);
+
+  @media only screen and (max-width: 500px) {
+    display:none!important;
+  }
+}
+
 /********** TOOLTIPS **********/
 
 .name {
